[STYLE] Fixed CV page on mobile devices

--- a/styles/timeline.module.scss
+++ b/styles/timeline.module.scss
@@ -36,30 +36,29 @@
   margin: 0 20px 20px 20px;
 }
 
-@media screen and (min-width: 768px) {
-  .timeline {
-    display: grid;
-    grid-template-columns: 3px 2fr;
-  }
-  .timelineMiddle {
-    position: relative;
-    background-image: linear-gradient(45deg, #f27121, #e94057, #8a2387);
-    //background-image: linear-gradient(45deg, #128fc4, #129cbb, #1457e7);
-    width: 3px;
-    height: 100%;
-  }
-  .mainMiddle {
-    opacity: 0;
-  }
-  .timelineCircle {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background-image: linear-gradient(45deg, #f27121, #e94057, #8a2387);
-    //background-image: linear-gradient(45deg, #128fc4, #129cbb, #1457e7);
-    transform: translateX(-50%);
-  }
+.timelineMiddle {
+  position: relative;
+  background-image: linear-gradient(45deg, #f27121, #e94057, #8a2387);
+  //background-image: linear-gradient(45deg, #128fc4, #129cbb, #1457e7);
+  width: 3px;
+  height: 100%;
+}
+.mainMiddle {
+  opacity: 0;
+}
+.timelineCircle {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-image: linear-gradient(45deg, #f27121, #e94057, #8a2387);
+  //background-image: linear-gradient(45deg, #128fc4, #129cbb, #1457e7);
+  transform: translateX(-50%);
+}
+
+.timeline {
+  display: grid;
+  grid-template-columns: 3px 2fr;
 }
